@@ -29,8 +29,14 @@ import java.util.stream.Collectors;
 public class JwtTokenProvider {
 
     private static final String AUTHORITIES_KEY = "auth";
-    private final Key key;
+    private static final String TOKEN_TYPE_KEY = "type";
+    private static final String CLAIM_USER_ID = "userId";
+    private static final String CLAIM_STATUS = "status";
+    private static final String ACCESS_TOKEN_TYPE = "ACCESS";
+    private static final String REFRESH_TOKEN_TYPE = "REFRESH";
 
+
+    private final Key key;
     private final long accessTokenValidityTime;
     private final long refreshTokenValidityTime;
 
@@ -46,14 +52,14 @@ public class JwtTokenProvider {
     }
 
     public String createAccessToken(Authentication authentication) {
-        return createToken(authentication, accessTokenValidityTime);
+        return createToken(authentication, accessTokenValidityTime, ACCESS_TOKEN_TYPE);
     }
 
     public String createRefreshToken(Authentication authentication) {
-        return createToken(authentication, refreshTokenValidityTime);
+        return createToken(authentication, refreshTokenValidityTime, REFRESH_TOKEN_TYPE);
     }
 
-    private String createToken(Authentication authentication, long tokenValidTime) {
+    private String createToken(Authentication authentication, long tokenValidTime, String tokenType) {
         String authorities = authentication.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
                 .collect(Collectors.joining(","));
@@ -69,30 +75,37 @@ public class JwtTokenProvider {
         return Jwts.builder()
                 .setSubject(email)
                 .claim(AUTHORITIES_KEY, authorities)
-                .claim("userId", userId)
-                .claim("status", status)
+                .claim(CLAIM_USER_ID, userId)
+                .claim(CLAIM_STATUS, status)
+                .claim(TOKEN_TYPE_KEY, tokenType)
                 .signWith(key, SignatureAlgorithm.HS256)
                 .setExpiration(validity)
                 .compact();
     }
 
+    public boolean isAccessToken(String token) {
+        String type = getClaims(token).get(TOKEN_TYPE_KEY, String.class);
+        return ACCESS_TOKEN_TYPE.equals(type);
+    }
+
+    public boolean isRefreshToken(String token) {
+        String type = getClaims(token).get(TOKEN_TYPE_KEY, String.class);
+        return REFRESH_TOKEN_TYPE.equals(type);
+    }
+
     public Authentication getAuthentication(String token) {
-        Claims claims = Jwts.parserBuilder()
-                .setSigningKey(key)
-                .build()
-                .parseClaimsJws(token)
-                .getBody();
+        Claims claims = getClaims(token);
 
         String role = claims.get(AUTHORITIES_KEY).toString();
 
         Collection<? extends GrantedAuthority> authorities =
                 Arrays.stream(role.split(","))
                         .map(SimpleGrantedAuthority::new)
-                        .collect(Collectors.toList());
+                        .toList();
 
         String email = claims.getSubject();
-        Long userId = ((Number) claims.get("userId")).longValue();
-        String status = claims.get("status", String.class);
+        Long userId = ((Number) claims.get(CLAIM_USER_ID)).longValue();
+        String status = claims.get(CLAIM_STATUS, String.class);
 
         CustomUserDetails principal = new CustomUserDetails(userId, email, role, UserStatus.valueOf(status));
 
@@ -101,7 +114,7 @@ public class JwtTokenProvider {
 
     public boolean validateToken(String token) {
         try {
-            Jwts.parserBuilder().setSigningKey(key).build().parseClaimsJws(token);
+            getClaims(token);
             return true;
         } catch (SecurityException | MalformedJwtException e) {
             throw new AuthBusinessException(AuthErrorCode.INVALID_TOKEN);
@@ -112,5 +125,13 @@ public class JwtTokenProvider {
         } catch (IllegalArgumentException e) {
             throw new AuthBusinessException(AuthErrorCode.EMPTY_CLAIMS);
         }
+    }
+
+    private Claims getClaims(String token) {
+        return Jwts.parserBuilder()
+                .setSigningKey(key)
+                .build()
+                .parseClaimsJws(token)
+                .getBody();
     }
 }
